@@ -670,8 +670,8 @@ static bool _opt_verify(void)
 	 * than in salloc/srun, there is not a missing chunk of code here.
 	 */
 
-	validate_hint_option(&opt);
-	if (opt.hint) {
+	if (opt.hint &&
+	    !validate_hint_option(&opt)) {
 		xassert(opt.ntasks_per_core == NO_VAL);
 		xassert(opt.threads_per_core == NO_VAL);
 		if (verify_hint(opt.hint,
